# cfgfw

./: .gitignore  LICENSE  README.md  build.cmd  deploy.cmd  pyproject.toml  setup-env.cmd
src/cfgfw/: accessor.py  context.py  factory.py  manager.py  tool.py
src/cfgfw/handler/: __init__.py  empty_value_check_handler.py  file_ref_handler.py  func_handler.py  handler.py  temp_val_handler.py
src/config_framework/: __init__.py  context.py  factory.py
src/config_framework/handler/: __init__.py  base_handler.py  db_handler.py  file_ref_handler.py  tuple_handler.py  val_ref_handler.py
tests/: a.py  c.py  config_manager_test.py
