[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfgfw"
version = "0.1.2"
description = "Configuration management utilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Myoung Hun Han" }]
dependencies = []

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]


[tool.hatch.build.targets.wheel]
packages = ["src/cfgfw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra"]
